--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,20 +5,13 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "weblite"
 version = "0.1.0"
-authors = [{name = "Your Name", email = "you@example.com"}]
-description = "Simplified web page tree representation for LLMs"
+authors = [{name = "Steve Wang", email = "stevewang.at.work@gmail.com"}]
+description = "A text-based web representation that retains meaningful structure information while displaying only human-visible content"
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.8"
 dependencies = [
     "playwright>=1.40.0",
-]
-
-[project.optional-dependencies]
-dev = [
-    "pytest>=7.0",
-    "black",
-    "flake8",
 ]
 keywords = ["web-automation", "playwright", "llm", "ai"]
 classifiers = [
@@ -32,10 +25,17 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0",
+    "black",
+    "flake8",
+]
+
 [project.urls]
-Homepage = "https://github.com/yourusername/weblite"
-Issues = "https://github.com/yourusername/weblite/issues"
-Repository = "https://github.com/yourusername/weblite.git"
+Homepage = "https://github.com/steve-z-wang/weblite"
+Issues = "https://github.com/steve-z-wang/weblite/issues"
+Repository = "https://github.com/steve-z-wang/weblite.git"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
